Migrate to postgresql

--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -27,7 +27,7 @@
         <td><%= animal.uf_desap %></td>
         <td><%= if animal.status == 1
             'Perdido'
-              elsif @animal.status == 2
+              elsif animal.status == 2
                 'Comunicado'
               else
                 'Encontrado'                
